# rust_try

./: Cargo.toml  LICENSE  README.md
assets/shaders/: backup.wgsl  compile.bat  shader.wgsl  triangle.vert  view_projection.wgsl
legacy/vulkan_tutorial/: vulkan_tutorial.rs
legacy/wgpu_tutoial/: camera.rs  uniform.rs  vertex.rs
rust_try_lib/: Cargo.toml  legacy.txt
rust_try_lib/legacy/: Chapter11.txt  Chapter12.txt  Chapter15.txt  Chapter4.txt  Chapter6.txt  Chapter8.txt  Chapter9.txt  another.txt
rust_try_lib/src/: application.rs  globals.rs  lib.rs  source.rs  time.rs
rust_try_lib/src/application/: application.rs  event.rs  module.rs  scene.rs  winit.rs
rust_try_lib/src/globals/: event.rs  globals.rs  input.rs  time.rs
rust_try_lib/src/graphics/: core.rs  graphics.rs  renderer.rs  renderer_on_dev.rs
rust_try_lib/src/graphics/ash/: core.rs  extensions.rs  new.rs
rust_try_lib/src/graphics/core/: ash.rs  core.rs
rust_try_lib/src/graphics/elements/: model.rs  model_backup.rs  texture.rs  texture_backup.rs  vertex.rs
rust_try_lib/src/graphics/wgpu/: core.rs
rust_try_lib/src/graphics/window/: window.rs  winit.rs
rust_try_lib/src/input/: keyboard.rs
rust_try_lib/src/inputs/: buttons.rs  cursor.rs  device.rs  inputs.rs  keyboard.rs  mock.rs  mouse.rs
rust_try_lib/src/math/: matrix.rs  vector.rs
rust_try_lib/src/rust_try/: mod.rs
rust_try_lib/src/source/: application.rs
rust_try_lib/src/source/structs/: mod.rs  vertex.rs
rust_try_lib/src/structs/: material.rs  mod.rs
rust_try_lib/src/system/: event.rs  main.rs
rust_try_lib/src/system/backend/: backend.rs  winit.rs
rust_try_lib/src/system/control/: control.rs  winit.rs
rust_try_lib/src/system/control/event/: event.rs  winit.rs
rust_try_lib/src/system/core/: core.rs  winit.rs
rust_try_lib/src/utils/: closure.rs  macros.rs  time.rs  utils.rs  wrapper.rs
rust_try_main/: Cargo.toml  legacy.txt
(+21 files in other folders)
