[package]
name = "rust_try_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.35.0+1.2.203", optional = true, default-features = false, features = ["linked", "debug"] }
ash-window = { version = "0.9.0", optional = true }
raw-window-handle = "0.3.4"
winit = { version = "0.26.0", optional = true }
shaderc = "0.7.3"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
tobj = "3.2.0"
lazy_static = "1.4.0"

[features]
default = ["vulkan", "winit"]
#graphic
vulkan = ["ash", "ash-window"]
#window

#event system
