[package]
name = "rust_try_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.4.2"
winit = { version = "0.26.0", optional = true }
shaderc = "0.7.3"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
tobj = "3.2.0"
lazy_static = "1.4.0"
wgpu = "0.12.0"
pollster = "0.2.5"

[features]
default = ["winit"]
#window

#event system
